syntax="proto3";

package migrant;

option java_multiple_files=true;
option java_package="com.sih.backendService.grpc";

service MigrantService{
  rpc GetMigrantById(MigrantIdRequest) returns(MigrantResponse);
}

message MigrantIdRequest{
  string migrantId=1;
}

message MigrantResponse{
  bool exists=1;
  string migrantId=2;
  string name=3;
}